<resources>
    <string name="app_name">myMeals</string>
    <string name="user">CORREO</string>
    <string name="pasword">CONTRASEÑA</string>
    <string name="cpasword">CONFIRMAR CONTRASEÑA</string>
    <string name="regist">Registrarse</string>
    <string name="login">Ingresar</string>
    <string name="welcome">Bienvenido</string>
    <string name="nodata">Por favor ingrese los datos restantes</string>
    <string name="nopass">Las contraseñas no coinciden</string>
    <string name="registered">Usuario registrado</string>
    <string name="noreg">Registro Cancelado</string>
    <string name="logerror">Usuario o contraseña incorrecta</string>
    <string name="logerror2">Por favor registrese.</string>
    <string name="perfil">Mi Perfil</string>
    <string name="salir">Cerrar Sesión</string>
    <string name="ppal">Principal</string>
    <string name="ingresar">TAMBIÉN PUEDES INGRESAR CON:</string>

    <string name="facebook_app_id">1228107957324337</string>
    <string name="loginIn">Usuario Logueado</string>
    <string name="Carrito">Carrito de compras</string>
    <string name="name">Nombre</string>
    <string name="saldo">Saldo</string>
    <string name="fecha">Fecha de nacimiento</string>
    <string name="editar">Editar Perfil</string>
    <string name="save">Guardar Cambios</string>
    <string name="cancelar">Cancelar</string>
    <string name="restaurante">Restaurante</string>
    <string name="direccion">Direccion: </string>
    <string name="telefono">Teléfono: </string>
    <string name="calificacion">Calificación</string>
    <string name="title_activity_restaurantes">RestaurantesActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_maps">Map</string>
    <string name="mapa">MAPA</string>
    <string name="plato">Plato</string>
    <string name="tiempo">Tiempo de Cocción: </string>
    <string name="agregar">Agregar al Carrito</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu">MENÚ</string>
</resources>
