<?xml version="1.0" encoding="utf-8"?>

<android.support.v7.widget.CardView

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="3dp"
    app:cardCornerRadius="4dp"
    android:layout_margin="2dp"
    android:id="@+id/restaurantesCardView">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_vertical"
        android:padding="5dp">

        <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/iFoto"
            android:layout_width="100dp"
            android:layout_height="100dp"
            app:civ_border_color="#FF000000"
            app:civ_border_width="2dp"
            android:layout_gravity="center"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_vertical">

            <TextView
                android:id="@+id/tNombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/restaurante"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tDireccion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/direccion"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tTelefono"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/telefono"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tCalificacion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/calificacion"
                android:textColor="@color/black"
                android:textSize="20sp" />

        </LinearLayout>

    </LinearLayout>

</android.support.v7.widget.CardView>